# simple_rag

backend/: .env  pyproject.toml
backend/src/: app.py  qdrant.py  rag.py
